# create_encrypted_database_sqlcipher

./: .gitignore  Cargo.toml  README.md
encrypted_db/embedded_migrations/: 20250206050024_create_tool_table.sql  20250206050025_insert_rows_tool_table.sql  20250206050026_add_register_column_tool_table.sql
src/: creation.rs  lib.rs
