[package]
name = "create_encrypted_database_sqlcipher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.95"
libsqlite3-sys = { version = "0.30.1", features = [
    "bundled-sqlcipher"
] }

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "migrate"
]